--- a/live.html
+++ b/live.html
@@ -130,6 +130,14 @@
       #codeInputPane {
         height: calc(100vh - 200px) !important;
       }
+
+      .classTbl {
+        display: none !important;
+      }
+
+      #attrToggleLink {
+        display: none;
+      }
     </style>
   </body>
 </html>
