--- a/live.html
+++ b/live.html
@@ -114,6 +114,17 @@
       </p>
     </div>
     <style>
+      html {
+        overflow: hidden;
+      }
+
+      #progOutputs {
+        position: sticky;
+        top: 0;
+        z-index: 1000;
+        background-color: white;
+      }
+
       #liveModeHeader,
       #codeInputWarnings,
       #eurekaSurveyPane,
@@ -138,6 +149,37 @@
       #attrToggleLink {
         display: none;
       }
+
+      #pyOutputPane {
+        position: relative;
+        height: calc(100vh - 50px);
+        overflow-y: scroll;
+      }
+
+      .visualizer {
+        min-height: 10000px;
+      }
     </style>
+
+    <script>
+      document.addEventListener("keydown", function (event) {
+        // Ctrl + Alt + Arrow Up for First Button
+        if (event.ctrlKey && event.altKey && event.keyCode == 38) {
+          document.getElementById("jmpFirstInstr").click();
+        }
+        // Ctrl + Alt + Arrow Left for Back Button
+        else if (event.ctrlKey && event.altKey && event.keyCode == 37) {
+          document.getElementById("jmpStepBack").click();
+        }
+        // Ctrl + Alt + Arrow Right for Forward Button
+        else if (event.ctrlKey && event.altKey && event.keyCode == 39) {
+          document.getElementById("jmpStepFwd").click();
+        }
+        // Ctrl + Alt + Arrow Down for Last Button
+        else if (event.ctrlKey && event.altKey && event.keyCode == 40) {
+          document.getElementById("jmpLastInstr").click();
+        }
+      });
+    </script>
   </body>
 </html>
