--- a/live.html
+++ b/live.html
@@ -164,19 +164,35 @@
     <script>
       document.addEventListener("keydown", function (event) {
         // Ctrl + Alt + Arrow Up for First Button
-        if (event.ctrlKey && event.altKey && event.keyCode == 38) {
+        if (
+          (event.ctrlKey || event.metaKey) &&
+          event.altKey &&
+          event.keyCode == 38
+        ) {
           document.getElementById("jmpFirstInstr").click();
         }
         // Ctrl + Alt + Arrow Left for Back Button
-        else if (event.ctrlKey && event.altKey && event.keyCode == 37) {
+        else if (
+          (event.ctrlKey || event.metaKey) &&
+          event.altKey &&
+          event.keyCode == 37
+        ) {
           document.getElementById("jmpStepBack").click();
         }
         // Ctrl + Alt + Arrow Right for Forward Button
-        else if (event.ctrlKey && event.altKey && event.keyCode == 39) {
+        else if (
+          (event.ctrlKey || event.metaKey) &&
+          event.altKey &&
+          event.keyCode == 39
+        ) {
           document.getElementById("jmpStepFwd").click();
         }
         // Ctrl + Alt + Arrow Down for Last Button
-        else if (event.ctrlKey && event.altKey && event.keyCode == 40) {
+        else if (
+          (event.ctrlKey || event.metaKey) &&
+          event.altKey &&
+          event.keyCode == 40
+        ) {
           document.getElementById("jmpLastInstr").click();
         }
       });
